@@ -9,7 +9,11 @@ Release 0.9.0 - unreleased
   IMPROVEMENT
 
     TAJO-769: A minor improvements for HCatalogStore (Fengdong Yu via hyunsik)
+
     TAJO-734: Arrange TajoCli output message. (hyoungjunkim via jihoon)
+
+    TAJO-758: Supports parameter values in the SQL file.
+    (Hyoungjun Kim via hyunsik)
 
   SUB TASKS
 
